--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -148,6 +148,138 @@
   text-transform: none;
 }
 
+ion-alert {
+  &.alert-ontime {
+    --min-width: 90vw; // calc(100% - 20px);
+    --border-spacing: 10px; // DELETE LATER
+    --letter-spacing: 10px; // DELETE LATER
+    --word-spacing: 10px; // DELETE LATER
+
+    .alert-head {
+      min-height: 54.399vw;
+      background-image: url("../assets/images/popover-1.png");
+      background-size: 100% 100%;
+      color: #fff;
+    }
+    .alert-message {
+      height: 0px;
+      padding: 0px;
+    }
+    .alert-button {
+      min-height: 50px;
+      color: var(--ion-color-hk-red);
+    }
+  }
+  &.alert-diluarkantor {
+    --min-width: 90vw; // calc(100% - 20px);
+
+    .alert-head {
+      min-height: 54.399vw;
+      background-image: url("../assets/images/popover-2.png");
+      background-size: 100% 100%;
+      color: #fff;
+    }
+    .alert-message {
+      height: 0px;
+      padding: 0px;
+    }
+    .alert-button {
+      min-height: 50px;
+      color: var(--ion-color-hk-red);
+    }
+  }
+  &.alert-wifiakses {
+    --min-width: 90vw; // calc(100% - 20px);
+
+    .alert-head {
+      min-height: 54.399vw;
+      background-image: url("../assets/images/popover-3.png");
+      background-size: 100% 100%;
+      color: #fff;
+    }
+    .alert-message {
+      height: 0px;
+      padding: 0px;
+    }
+    .alert-button {
+      min-height: 50px;
+      color: var(--ion-color-hk-red);
+    }
+  }
+  &.alert-lembur {
+    --min-width: 90vw; // calc(100% - 20px);
+
+    .alert-head {
+      min-height: 54.399vw;
+      background-image: url("../assets/images/popover-4.png");
+      background-size: 100% 100%;
+      color: #fff;
+    }
+    .alert-message {
+      height: 0px;
+      padding: 0px;
+    }
+    .alert-button {
+      min-height: 50px;
+      color: var(--ion-color-hk-red);
+    }
+  }
+  &.alert-terlambat {
+    --min-width: 90vw; // calc(100% - 20px);
+
+    .alert-head {
+      min-height: 54.399vw;
+      background-image: url("../assets/images/popover-5.png");
+      background-size: 100% 100%;
+      color: #fff;
+    }
+    .alert-message {
+      height: 0px;
+      padding: 0px;
+    }
+    .alert-button {
+      min-height: 50px;
+      color: var(--ion-color-hk-red);
+    }
+  }
+  &.alert-pulangcepat {
+    --min-width: 90vw; // calc(100% - 20px);
+
+    .alert-head {
+      min-height: 54.399vw;
+      background-image: url("../assets/images/popover-6.png");
+      background-size: 100% 100%;
+      color: #fff;
+    }
+    .alert-message {
+      height: 0px;
+      padding: 0px;
+    }
+    .alert-button {
+      min-height: 50px;
+      color: var(--ion-color-hk-red);
+    }
+  }
+  &.alert-pulang {
+    --min-width: 90vw; // calc(100% - 20px);
+
+    .alert-head {
+      min-height: 54.399vw;
+      background-image: url("../assets/images/popover-7.png");
+      background-size: 100% 100%;
+      color: #fff;
+    }
+    .alert-message {
+      height: 0px;
+      padding: 0px;
+    }
+    .alert-button {
+      min-height: 50px;
+      color: var(--ion-color-hk-red);
+    }
+  }
+}
+
 .ion-color-hk-red {
   --ion-color-base: var(--ion-color-hk-red);
   --ion-color-base-rgb: var(--ion-color-hk-red-rgb);
